--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ button{
 }
 
 .para2{
+    padding-top: 50px;
     text-align: center;
     font-size: 36px;
     font-weight: 900;
@@ -96,6 +97,8 @@ button{
 .container2{
     display: flex;
     justify-content: center;
+    padding-bottom: 20px;
+    padding-top: 5px
 }
 
 .box{
@@ -114,6 +117,7 @@ button{
     flex-direction: column;
     justify-content: center;
     max-width: 200px;
+    padding-bottom: 50px;
 }
 
 .text2{
@@ -140,6 +144,7 @@ button{
     margin: 0 auto;
     padding: 0 50px;
     flex-wrap: wrap;
+    padding-top: 50px;
 }
 
 .thor{
@@ -147,6 +152,7 @@ button{
     display: flex;
     font-size: 20px;
     color: #1F2937;
+    padding-bottom: 50px;
 }
 
 /* ----------------------start of fourth section---------------------------- */
@@ -167,6 +173,8 @@ button{
     align-items: center;
     padding: 0 30px;
     gap: 200px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 
@@ -200,4 +208,5 @@ button{
     justify-content: center;
     align-items: center;
     padding: 20px;
+    padding-top: 20px;
 }
